[project]
name = "qr-code-scrub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
]

[tool.uv]
package = true
dev-dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
